# cc-jira

./: .gitignore  pyproject.toml
.beads/: metadata.json
src/trak/cli/: config_cmd.py  issue.py  main.py  project.py  search.py  workflow.py
src/trak/core/: formatting.py  search.py
src/trak/db/: connection.py  schema.py
src/trak/models/: comment.py  config.py  issue.py  project.py  workflow.py
tests/: conftest.py
tests/e2e/: test_config_e2e.py  test_error_handling_e2e.py  test_init_e2e.py  test_issue_e2e.py  test_json_output_e2e.py  test_project_e2e.py  test_search_e2e.py  test_workflow_e2e.py
tests/unit/: test_models_issue.py  test_models_project.py  test_search.py
